test/resources/parser/failing/ExtCallError1.scala
object CallError {
  ()() // Unit literal + call!
}
